<resources>
    <string name="app_name">LaBarraDelTiburon</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="registrarse">Registrarse</string>
    <string name="mainTittle">Entra a tu bodega</string>

    <string name="clave">Clave</string>
    <string name="correo">Correo</string>


    <!-- STRINGS REGISTRO USUARIO -->
    <string name="rpclave">Repetir Clave</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="fechanac">Fecha de nacimiento</string>
    <string name="genero">Genero</string>
    <string name="registrar_receta">Registrar receta</string>
    <string name="listado_de_recetas">Listado de recetas</string>
    <string name="nombreusuario">nombreUsuario</string>
    <string name="title_activity_list_cocktail">ListCocktailActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="correo_usuario">Correo usuario</string>
    <string name="recordar_usuario">Recordar usuario</string>
    <string name="nombrecoctel">nombreCoctel</string>


    <!-- VARIABLES CLAVES -->

</resources>
